# kings_paradox

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
docs/: authority-model.md  game-concept.md  npc-dialogue-architecture.md  scene-orchestration.md  technical-prototype.md
scripts/: demo_full_scene.py  eval_decision_making.py  eval_for_review.py  run_eval.sh  test_2step_pipeline.py  test_multi_npc.py  test_multiturn.py  test_personality_integration.py  test_scene_opening.py  test_wacky_scenarios.py
src/kings_paradox/prototype/: consequences.py  game.py  parser.py  scene.py  state.py
tests/: conftest.py  test_consequences.py  test_parser.py  test_scene.py  test_state.py
tests/t01_knowledge/: __init__.py  promptfoo.yaml  redteam.yaml  scenarios_t1b_decision.yaml  test_knowledge_boundaries.py
tests/t01_knowledge/prompts/: duke_base.txt  duke_decision_maker.txt  duke_secret_keeper.txt  duke_system.txt  duke_user.txt
tests/t02_consistency/: __init__.py  promptfoo.yaml
tests/t02_consistency/prompts/: duke_dialogue.txt
tests/t03_rumor_mutation/: __init__.py  promptfoo.yaml
tests/t03_rumor_mutation/prompts/: rumor_mutator.txt
tests/t04_telephone/: __init__.py  promptfoo.yaml
tests/t05_narrative_bridging/: __init__.py  promptfoo.yaml
tests/t06_selective_memory/: __init__.py  promptfoo.yaml
tests/t07_vignette_orchestration/: __init__.py  test_vignette_orchestration.py
tests/t08_long_context/: __init__.py
tests/t09_justified_killing/: __init__.py  promptfoo.yaml
tests/t10_conspiracy_detection/: __init__.py  promptfoo.yaml
(+9 files in other folders)
